# llm-playground

./: .gitignore  aws_cheatsheet.txt  pyvenv.cfg  requirements.txt
llm-chain-demo/: Cargo.toml
llm-chain-demo/src/: main.rs
llm-orca-core/: Cargo.toml
llm-orca-core/src/: main.rs
llm-orca-models/: Cargo.toml
llm-orca-models/src/: main.rs
src/: llamacpp-rag-local.py  llamacpp-rag-web.py  llamacpp.py
