[package]
name = "llm-orca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = { git = "https://github.com/scrippt-tech/orca", package = "orca-core" }
models = { git = "https://github.com/scrippt-tech/orca", package = "orca-models" }
anyhow = "1.0.75"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
clap = "4.4.7"
serde_json = "1.0.108"
env_logger = "0.10.0"
rand = "0.8.5"
tokenizers = "0.15.0"
